--- a/static/ui.css
+++ b/static/ui.css
@@ -7,7 +7,8 @@
 }
 
 table {
-	margin: 6pt;
+	margin-left: auto;
+	margin-right: auto;
 	border-collapse: collapse;
 }
 
@@ -21,18 +22,27 @@ th div {
 	font-size: 7pt;
 }
 
-tbody tr {
-	height: 12pt;
-}
-
-tbody tr:hover {
+tbody tr.value:hover {
 	background-color: #eee;
 }
 
+tbody tr.miss:hover {
+	background-color: #eee;
+}
+
+td.left div,
+td.right div {
+	width: 24px;
+	overflow-x: hidden;
+}
+
+td.link div {
+	width: 48px;
+}
+
 td.type div {
-	width: 12pt;
-	font-size: 6pt;
-	margin-right: 4pt;
+	font-size: 7pt;
+	margin-right: 6pt;
 	color: #ccc;
 }
 
@@ -40,14 +50,25 @@ td.name div {
 	font-family: monospace;
 }
 
+tr.value td.name div {
+	font-family: sans-serif;
+}
+
 td.yes, td.no {
 	width: 12pt;
 }
 
-td.yes div, td.no div {
-	width: 10pt;
+td.yes div, td.no div, td.diff div {
 	height: 10pt;
 	margin: auto;
+}
+
+td.yes div, td.no div {
+	width: 10pt;
+}
+
+td.diff div {
+	width: 10pt;
 }
 
 td.yes div {
@@ -57,3 +78,13 @@ td.yes div {
 td.no div {
 	background-color: red;
 }
+
+td.diff div {
+	background-color: blue;
+}
+
+tr.depth-0 td.name div { margin-left: 0pt; }
+tr.depth-1 td.name div { margin-left: 24pt; }
+tr.depth-2 td.name div { margin-left: 48pt; }
+tr.depth-3 td.name div { margin-left: 72pt; }
+tr.depth-4 td.name div { margin-left: 96pt; }
