--- a/static/ui.css
+++ b/static/ui.css
@@ -22,16 +22,15 @@ th div {
 	font-size: 7pt;
 }
 
-tbody tr.value:hover {
+tr.miss:hover {
 	background-color: #eee;
 }
 
-tbody tr.miss:hover {
+tr.diff:hover {
 	background-color: #eee;
 }
 
-td.left div,
-td.right div {
+td.left div, td.right div {
 	width: 24px;
 	overflow-x: hidden;
 }
@@ -50,24 +49,25 @@ td.name div {
 	font-family: monospace;
 }
 
-tr.value td.name div {
+tr.diff td.name div {
 	font-family: sans-serif;
+	color: blue;
+}
+
+tr.diff div.value {
+	display: none;
 }
 
 td.yes, td.no {
 	width: 12pt;
 }
 
-td.yes div, td.no div, td.diff div {
+td.yes div, td.no div {
 	height: 10pt;
 	margin: auto;
 }
 
 td.yes div, td.no div {
-	width: 10pt;
-}
-
-td.diff div {
 	width: 10pt;
 }
 
@@ -77,10 +77,6 @@ td.yes div {
 
 td.no div {
 	background-color: red;
-}
-
-td.diff div {
-	background-color: blue;
 }
 
 tr.depth-0 td.name div { margin-left: 0pt; }
